# aws_floci_data_pipeline_00

./: .dockerignore  .env.docker  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  dummy_test_file.txt  opencode.json  pyproject.toml
.dlt/: config.toml  secrets.toml.example
.opencode/commands/: push-all.md  run-pipeline.md
.opencode/rules/: tooling.md
docker/: Dockerfile.orchestrator  Dockerfile.pipeline
infra/: ecr.tf  ecs.tf  iam.tf  lambda.tf  outputs.tf  provider.tf  s3.tf  scheduler.tf  terraform.tfvars.example  variables.tf
openspec/changes/coingecko-data-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/coingecko-data-pipeline/specs/data-pipeline/: spec.md
openspec/changes/coingecko-data-pipeline/specs/ecs-task/: spec.md
openspec/changes/coingecko-data-pipeline/specs/infrastructure/: spec.md
openspec/changes/coingecko-data-pipeline/specs/lambda-orchestrator/: spec.md
openspec/changes/coingecko-data-pipeline/specs/local-env/: spec.md
openspec/changes/coingecko-data-pipeline/specs/scheduling/: spec.md
src/orchestrator/: handler.py
src/pipeline/: main.py  pipeline.py
