[project]
name = "coingecko-data-pipeline"
version = "0.1.0"
description = "Cryptocurrency market data pipeline using CoinGecko API, dlt, and AWS"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
pipeline = ["dlt[s3,parquet]>=1.0"]
orchestrator = ["boto3", "aws-lambda-powertools"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
